# Adv.-P-project

./: CMakeLists.txt  Dice.cpp  Exceptions.cpp  Exceptions.h  Game.cpp  Mohre.cpp  Player.cpp  PreviousMove.cpp  Socket.h  Time.cpp  classes.h  helperfunctions.h  main.cpp  project.txt
